Fit eventcenter
