# cmd/console/api/platform_v2.go
@@ -10,8 +10,7 @@ func (api *api) platform() func(chi.Router) {
 		r.Route("/microservice", api.Microservice())
 		r.Route("/audit", api.audit())
 		r.Route("/cleanup", api.cleanup())
-		r.Route("/alerts", api.alert())
 		r.Route("/config", api.config())
-
+		r.Route("/eventsCenter", api.eventsCenter())
 	}
 }
